--- a/index.html
+++ b/index.html
@@ -1,1 +1,143 @@
-Hello
+<html>
+    <head>
+        <style>
+            * {
+              text-align: center;
+            }
+
+            h1 {
+              text-align: center;
+              display: table;
+              margin: 0 auto;
+            }
+
+            .story {
+                color: #ff0000;
+                margin: 0.1em auto;
+                display: block;
+                text-align: center;
+                font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;
+            }
+
+            ul {
+                margin: 0.5em auto;
+                margin-left: 0.5em auto;
+                padding-left: 2em;
+                padding-right: 1.5em;
+            }
+
+            li {
+                color: #ff0000;
+                margin: 0.15em auto;
+            }
+
+            .tableItem {
+                text-align: left;
+            }
+
+            .featuresTable {
+                display: table;
+                margin: 0 auto;
+                color: #ff0000;
+                border-color: #ff0000;
+                border-style: solid;
+                border-width: 0.15em;
+                font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;
+            }
+
+            .innerWrapper {
+                display: table;
+                margin: 0.2em;
+            }
+
+            .outerWrapper {
+                display: table;
+                margin: 0.15em auto;
+                border-color: #ff0000;
+                border-style: solid;
+                border-width: 0.15em;
+            }
+
+            .logo {
+                display: table;
+                margin: 0 auto;
+                color: #ff0000;
+                vertical-align: middle;
+                font-family: exocet, sans-serif;
+                font-style: normal;
+                font-weight: 300;
+                font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;
+            }
+
+            body {
+                background-color: #000000;
+                background-size: cover;
+            }
+
+            span {
+                display: block;
+                text-align: center;
+                color: #ff0000;
+            }
+
+            table {
+                display: table;
+                margin: 0 auto;
+            }
+        </style>
+    </head>
+    <body>
+        <div>
+            <p><span>&nbsp;</span></p>
+            <table class="logo">
+                <tbody>
+                <tr>
+                    <td>
+                        <img src="images/gargoyle.gif"/>
+                    </td>
+                    <td>
+                        <h1>Penis on Fire</h1>
+                    </td>
+                    <td>
+                        <img src="images/gargoyle.gif"/>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+            <p>&nbsp;</p>
+            <img src="images/bar.gif"/>
+            <p>
+                <span class="story">Nearby an unremarkable village, a&nbsp;<strong>lone rogue</strong> once discovered an ancient <strong>Amulet.<br /></strong></span>
+                <span class="story">With its immeasurable power, the world could have become a better place. <br /></span>
+                <span class="story">Unfortunately, the <strong>Amulet</strong> was taken by a <strong>cult of perverts</strong>...</span>
+            </p>
+            <div class="outerWrapper">
+            <div class="innerInnerWrapper">
+                <table class="featuresTable">
+                    <tbody>
+                    <tr>
+                    <td>
+                    <ul>
+                    <li><span class="tableItem">Over 40 different monsters.</span></li>
+                    <li><span class="tableItem">26 challenging levels spread over 5 zones.</span></li>
+                    <li><span class="tableItem">Proceduraly generated maps, using an advanced world-builder.</span></li>
+                    <li><span class="tableItem">64-bit graphics.</span></li>
+                    <li><span class="tableItem">Inspired by 1980's sword &amp; sorcery computer games.</span></li>
+                    </ul>
+                    </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            </div>
+            <p><span>&nbsp;</span></p>
+            <p><span class="story">Coming soon for Windows, Linux, and Apple computers.</span></p>
+            <img src="images/bar.gif"/>
+            <p><span>&nbsp;</span></p>
+            <p>&nbsp;</p>
+        </div>
+        <footer>
+          <p><span>Penis on Fire<strong>&reg;&nbsp;</strong>game under development by crone96. Copyright&copy; 2023. All Rights Reserved.</span></p>
+        </footer>
+    </body>
+</html>
