--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <p>&nbsp;</p>
         </div>
         <footer>
-          <p><span>Penis on Fire<strong>&amptrade;&nbsp;</strong>game under development by crone96. Copyright&copy; 2023. All Rights Reserved.</span></p>
+          <p><span>Penis on Fire<strong>&trade;&nbsp;</strong>game under development by crone96. Copyright&copy; 2023. All Rights Reserved.</span></p>
         </footer>
     </body>
 </html>
