--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
     <head>
+        <title>Penis on Fire</title>
+        <meta name="description" content="This is the homepage for Penis on Fire, a roguelike sword & sorcery PC computer role playing game (RPG) in development."/>
+        <meta name="robots" content="index, follow" />
+
         <style>
             * {
               text-align: center;
@@ -33,6 +37,12 @@
 
             .tableItem {
                 text-align: left;
+            }
+
+            hr {
+              background: linear-gradient(to right, #cccccc, #d9d9d9);
+              height: 0.2em;
+              width: 60%;
             }
 
             .featuresTable {
@@ -80,6 +90,13 @@
                 color: #ff0000;
             }
 
+            .foot {
+                display: block;
+                text-align: center;
+                color: #ff0000;
+                font-size: 0.8em;
+            }
+
             table {
                 display: table;
                 margin: 0 auto;
@@ -93,19 +110,19 @@
                 <tbody>
                 <tr>
                     <td>
-                        <img src="images/gargoyle.gif"/>
+                        <img src="images/fireanimation2.gif"/>
                     </td>
                     <td>
                         <h1>Penis on Fire</h1>
                     </td>
                     <td>
-                        <img src="images/gargoyle.gif"/>
+                        <img src="images/fireanimation2.gif"/>
                     </td>
                 </tr>
                 </tbody>
             </table>
             <p>&nbsp;</p>
-            <img src="images/bar.gif"/>
+            <hr/>
             <p>
                 <span class="story">Nearby an unremarkable village, a&nbsp;<strong>lone rogue</strong> once discovered an ancient <strong>Amulet.<br /></strong></span>
                 <span class="story">With its immeasurable power, the world could have become a better place. <br /></span>
@@ -132,12 +149,12 @@
             </div>
             <p><span>&nbsp;</span></p>
             <p><span class="story">Coming soon for Windows, Linux, and Apple computers.</span></p>
-            <img src="images/bar.gif"/>
+            <hr/>
             <p><span>&nbsp;</span></p>
             <p>&nbsp;</p>
         </div>
         <footer>
-          <p><span>Penis on Fire<strong>&trade;&nbsp;</strong>game under development by crone96. Copyright&copy; 2023. All Rights Reserved.</span></p>
+          <p><span class="foot">Penis on Fire<strong>&trade;&nbsp;</strong>game under development by crone96. Copyright&copy; 2023. All Rights Reserved.</span></p>
         </footer>
     </body>
 </html>
