--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Penis on Fire</title>
         <meta name="description" content="This is the homepage for Penis on Fire, a roguelike sword & sorcery PC computer role playing game (RPG) in development."/>
         <meta name="robots" content="index, follow" />
-
+        <link rel="shortcut icon" href="images/favicon/favicon.ico">
         <style>
             * {
               text-align: center;
