--- a/notebook.html
+++ b/notebook.html
@@ -21,11 +21,11 @@
                 font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;
             }
 
-            .story {
+            .blog {
                 color: #ff0000;
                 margin: 0.1em auto;
                 display: block;
-                text-align: center;
+                text-align: left;
                 font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;
             }
 
@@ -61,7 +61,7 @@
                 font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;
             }
 
-            .innerInnerWrapper {
+            .innerWrapperFeatures {
                 display: table;
                 margin: 0.2em;
             }
@@ -72,6 +72,7 @@
                 border-color: #ff0000;
                 border-style: solid;
                 border-width: 0.15em;
+                width: 60%;
             }
 
             .logo {
@@ -119,7 +120,7 @@
                         <img src="images/fireanimation2.gif"/>
                     </td>
                     <td>
-                        <h1>Penis on Fire</h1>
+                        <h1>Notebook</h1>
                     </td>
                     <td>
                         <img src="images/fireanimation2.gif"/>
@@ -129,23 +130,28 @@
             </table>
             <p>&nbsp;</p>
             <hr/>
-            <p>
-                <span class="story">Nearby an unremarkable village, a&nbsp;<strong>lone rogue</strong> once discovered an ancient <strong>Amulet.<br /></strong></span>
-                <span class="story">With its immeasurable power, the world could have become a better place. <br /></span>
-                <span class="story">Unfortunately, the <strong>Amulet</strong> was taken by a <strong>cult of perverts</strong>...</span>
-            </p>
+
             <div class="outerWrapper">
-            <div class="innerInnerWrapper">
+            <div class="innerWrapperFeatures">
                 <table class="featuresTable">
                     <tbody>
                     <tr>
                     <td>
                     <ul>
-                    <li><span class="tableItem">Over 40 different monsters.</span></li>
-                    <li><span class="tableItem">26 challenging levels spread over 5 zones.</span></li>
-                    <li><span class="tableItem">Proceduraly generated maps, using an advanced world-builder.</span></li>
-                    <li><span class="tableItem">64-bit graphics.</span></li>
-                    <li><span class="tableItem">Inspired by 1980's sword &amp; sorcery computer games.</span></li>
+                    <li>
+                        <span class="blog">
+                            2023/08/07
+                            <br/>
+                            <br/>
+                            Greetings frens. This is the first update. Today there was a tornado watch but otherwise things
+                            are calm. A green tea is a good way to relax on a Monday.
+                            <br/>
+                            <br/>
+                            Unfortunately there will be no more updates for a while as progress continues. I will
+                            update once every New Year until the game is complete. There will be no updates in between so please
+                            be patient. Appreciate the understanding.
+                        </span>
+                    </li>
                     </ul>
                     </td>
                     </tr>
@@ -154,10 +160,9 @@
             </div>
             </div>
             <p><span>&nbsp;</span></p>
-            <p><span class="story">In development for Windows, Linux, and Apple computers.</span></p>
             <hr/>
-            <a href="notebook.html">Notebook</a>
-            <p><span>&nbsp</span></p>
+            <a href="index.html">Home</a>
+            <p><span>&nbsp;</span></p>
             <p>&nbsp;</p>
         </div>
         <footer>
