--- a/notebook.html
+++ b/notebook.html
@@ -147,7 +147,7 @@
                             are calm. A green tea is a good way to relax on a Monday.
                             <br/>
                             <br/>
-                            Unfortunately there will be no more updates for a while as progress continues. I will
+                            Unfortunately there will be no updates for a while as progress continues. I will
                             update once every New Year until the game is complete. There will be no updates in between so please
                             be patient. Appreciate the understanding.
                         </span>
