--- a/notebook.html
+++ b/notebook.html
@@ -151,6 +151,21 @@
                             update once every New Year until the game is complete. There will be no updates in between so please
                             be patient. Appreciate the understanding.
                         </span>
+			<span class="blog">
+			    2024/02/25
+			    <br/>
+			    <br/>
+			    Apologies for the long time in between updates. Progress is going well. Is it a roguelike if there is no
+			    confusion spell? I don't think there will be a confusion spell in this game. It's very easy to fall
+			    into temptation to follow the script, not just in making roguelike but also in life. 
+			    <br/>
+			    <br/>
+			    On the subject of game development, will there ever be anything as great as Gates of Boletaria? I heard the entirety
+			    of Demon Souls was built in waterfall style. Waterfall gets a bit too much criticism, especially by 
+			    some of the bureaucrat class. Was not the Apollo 11 also a waterfall project? I feel at some point programming lost
+			    its way as an engineering discipline. Instead now we have hackathon culture. I'm not sure if POF will amount to 
+			    anything noteworthy, but I'll nonetheless keep working on it at my turtle pace.
+			</span>
                     </li>
                     </ul>
                     </td>
