--- a/notebook.html
+++ b/notebook.html
@@ -132,7 +132,38 @@
             <hr/>
 
             <div class="outerWrapper">
-            <div class="innerWrapperFeatures">
+           <div class="innerWrapperFeatures">
+                <table class="featuresTable">
+                    <tbody>
+                    <tr>
+                    <td>
+                    <ul>
+          	    <li>
+			<span class="blog">
+			    2024/02/25
+			    <br/>
+			    <br/>
+			    Apologies for the long time in between updates. Progress is going well. Is it a roguelike if there is no
+			    confusion spell? I don't think there will be a confusion spell in this game. It's very easy to fall
+			    into temptation to follow the script, not just in making roguelike but also in life. 
+			    <br/>
+			    <br/>
+			    On the subject of game development, will there ever be anything as great as Gates of Boletaria? I heard the entirety
+			    of Demon Souls was built in waterfall style. Waterfall gets a bit too much criticism.
+			    Was not the Apollo 11 also a waterfall project? I feel at some point programming lost
+			    its way as an engineering discipline. Instead now we have hackathon culture. I'm not sure if POF will amount to 
+			    anything noteworthy, but I'll nonetheless keep working on it at my turtle pace.
+			    <br/>
+			    <br/>
+			</span>
+                    </li>
+                    </ul>
+                    </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+             <div class="innerWrapperFeatures">
                 <table class="featuresTable">
                     <tbody>
                     <tr>
@@ -150,29 +181,17 @@
                             Unfortunately there will be no updates for a while as progress continues. I will
                             update once every New Year until the game is complete. There will be no updates in between so please
                             be patient. Appreciate the understanding.
+			    <br/>
+			    <br/>
                         </span>
-			<span class="blog">
-			    2024/02/25
-			    <br/>
-			    <br/>
-			    Apologies for the long time in between updates. Progress is going well. Is it a roguelike if there is no
-			    confusion spell? I don't think there will be a confusion spell in this game. It's very easy to fall
-			    into temptation to follow the script, not just in making roguelike but also in life. 
-			    <br/>
-			    <br/>
-			    On the subject of game development, will there ever be anything as great as Gates of Boletaria? I heard the entirety
-			    of Demon Souls was built in waterfall style. Waterfall gets a bit too much criticism, especially by 
-			    some of the bureaucrat class. Was not the Apollo 11 also a waterfall project? I feel at some point programming lost
-			    its way as an engineering discipline. Instead now we have hackathon culture. I'm not sure if POF will amount to 
-			    anything noteworthy, but I'll nonetheless keep working on it at my turtle pace.
-			</span>
-                    </li>
+		    </li>
                     </ul>
                     </td>
                     </tr>
                     </tbody>
                 </table>
             </div>
+ 
             </div>
             <p><span>&nbsp;</span></p>
             <hr/>
