--- a/notebook.html
+++ b/notebook.html
@@ -150,8 +150,7 @@
 			    <br/>
 			    On the subject of game development, I don't believe it gets any better than Gates of Boletaria. I heard the entirety
 			    of Demon Souls was built in waterfall style. Waterfall gets a bit too much criticism.
-			    Pretty sure the Apollo 11 was also a waterfall project. I feel at some point programming lost
-			    its way as an engineering discipline. Instead now we have hackathon culture. I'm not sure if POF will amount to 
+			    Instead now we have iteration and hackathon cultures. I'm not sure if POF will amount to
 			    anything noteworthy, but I'll nonetheless keep working on it at my turtle pace.
 			    <br/>
 			    <br/>
